CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(NetPlay)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)

ADD_DEFINITIONS(-DDLL_EXPORTS)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Bin)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/Include
)

ADD_SUBDIRECTORY(Example/EchoTest)
ADD_SUBDIRECTORY(Example/DummyTest)