PROJECT(EchoTest)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/Include
)

ADD_EXECUTABLE(${PROJECT_NAME}
	${PROJECT_NAME}.cpp
)

TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC 
	${PROJECT_SOURCE_DIR}/../../Lib/${CMAKE_BUILD_TYPE}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	NetPlay
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}
    PROPERTIES FOLDER "Example"
)