PROJECT(DummyClient)

ADD_DEFINITIONS(-DWXUSINGDLL)

FILE(GLOB SHARED_FILES
	${PROJECT_SOURCE_DIR}/../Shared/*.h
	${PROJECT_SOURCE_DIR}/../Shared/*.cpp
)

FOREACH(FILE ${SHARED_FILES})
	SOURCE_GROUP("Shared Files" FILES "${FILE}")

ENDFOREACH()

FILE(GLOB SOURCE_FILES 
    *.h
    *.cpp
)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/../Shared
)

ADD_EXECUTABLE(${PROJECT_NAME} WIN32
    ${SOURCE_FILES}
    ${SHARED_FILES}
)

TARGET_PRECOMPILE_HEADERS(${PROJECT_NAME} PRIVATE
    ${PROJECT_SOURCE_DIR}/../Shared/Pch.h
)

TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PRIVATE 
	${PROJECT_SOURCE_DIR}/../../../Lib/${CMAKE_BUILD_TYPE}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    NetPlay
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}
    PROPERTIES FOLDER "Example"
)